unpackaged/main/default/objects/Contact/fields/Allow_Warning_Dup_Contact__c.field-meta.xml
<CustomField>
    <fullName>Allow_Warning_Dup_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created for TAGCRM-1030</description>
    <label>Allow Warning Dup Contact</label>
    <type>Checkbox</type>
</CustomField>