unpackaged/main/default/objects/Contact/fields/Override_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Override_Duplicate__c</fullName>
    <description>Controls if the Flow is going to override the duplicate rule</description>
    <label>Override Duplicate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>