unpackaged/main/default/objects/Contact/fields/Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>Phone_Ext__c</fullName>
    <label>Phone Ext.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>