unpackaged/main/default/objects/Contact/validationRules/Required_Fields_on_Contact_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_on_Contact_Creation</fullName>
    <active>true</active>
    <description>Email or Phone or Mobile</description>
    <errorConditionFormula>AND
(
ISBLANK(Email),
ISBLANK(Phone),
ISBLANK(MobilePhone)
)</errorConditionFormula>
    <errorMessage>Please fill in either the Email or Phone or Mobile field</errorMessage>
</ValidationRule>